# paramite

./: .gitignore  CMakeLists.txt  README.md
containers/: Dockerfile.sandbox
containers/scripts/: file_monitor.sh  network_monitor.sh  process_monitor.sh  run_analysis.sh  syscall_monitor.sh
docs/: WINDOWS_BUILD.md
include/paramite/analyzers/: behavior_analyzer.hpp  ioc_extractor.hpp  static_analyzer.hpp
include/paramite/core/: analysis_engine.hpp  sample_manager.hpp  sandbox_engine.hpp
include/paramite/monitors/: file_monitor.hpp  network_monitor.hpp  process_monitor.hpp  syscall_monitor.hpp
include/paramite/parsers/: strace_parser.hpp  wine_parser.hpp
include/paramite/reporters/: html_reporter.hpp  json_reporter.hpp  timeline_builder.hpp
include/paramite/utils/: container_utils.hpp  hash_utils.hpp  string_utils.hpp
scripts/: build.sh  run_analysis.sh  setup_environment.sh
src/: main.cpp
src/analyzers/: behavior_analyzer.cpp  ioc_extractor.cpp  static_analyzer.cpp
src/core/: analysis_engine.cpp  sample_manager.cpp  sandbox_engine.cpp
src/monitors/: file_monitor.cpp  network_monitor.cpp  process_monitor.cpp  syscall_monitor.cpp
src/parsers/: strace_parser.cpp  wine_parser.cpp
src/reporters/: html_reporter.cpp  json_reporter.cpp  timeline_builder.cpp
src/utils/: container_utils.cpp  hash_utils.cpp  string_utils.cpp
